# repo

./: .env.sample  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  justfile  package-lock.json  package.json  rust-toolchain.toml
api/: README.md  api.json
api/assemblyscript/: README.md  api.ts  lib.ts  package.json
api/clang/: README.md  lib.c  lib.cpp  make.sh
api/clang/include/: api.h  api.hpp  memory.off  nostdlib.h  nostdlib.hpp  raw.h
api/rust/: README.md
api/rust/api/: Cargo.toml
api/rust/api/src/: lib.rs
api/rust/explorer/: Cargo.toml
api/rust/explorer/src/: main.rs
api/rust/hello/: Cargo.toml
api/rust/hello-wasi/: Cargo.toml  build.sh
api/rust/hello-wasi/src/: main.rs
api/rust/hello/src/: main.rs
api/wat/: README.md  explorer.wat  lib.wat
bulb/: Cargo.toml
bulb/src/: dto.rs  hex.rs  lib.rs  zorder.rs
bulb/src/hex/: frac.rs
client/: .parcelrc  Cargo.toml  justfile  package.json
client/src/: game.rs  gui.rs  index.html  index.pug  logger.rs  main.js  main.rs  main.ts  opts.rs  style.styl  util.rs  view.rs
client/src/client/: mod.rs  online.rs  remote.rs
client/src/client/local/: pulled.rs  thread.rs
client/src/client/offline/: mod.rs  pulled.rs  thread.rs
engine/: Cargo.toml
engine/src/: api.rs  bot.rs  dto.rs  gen.rs  generational.rs  grid.rs  helper.rs  lib.rs  user.rs  wasm.rs
engine/src/noise/: fbm.rs  math.rs  mod.rs  opensimplex.rs  permutationtable.rs
server/: Cargo.toml  package.json
server/src/: api.rs  game.rs  http.rs  main.rs  util.rs
server/src/api/: dto.rs  mod.rs
server/src/auth/: jwt.rs  mod.rs  oauth.rs
server/src/game/: dto.rs  mod.rs  wasm.rs
server/src/http/: mod.rs
sys/: Cargo.toml
sys/src/: lib.rs
sys/src/other/: wasm.rs
sys/src/spec/: wasm.rs
web/: package.json
web/src/: main.ts
