[package]
name = "scalliony-bulb"
version = "0.1.0"
description = "Scalliony programming shared types library"
categories = ["game-development", "wasm"]
keywords = ["game", "wasm", "webassembly", "lib"]
edition = "2021"
license = "MIT"
repository = "https://github.com/scalliony/repo"

[dependencies]
bytes = "1"
serde = { version = "1", optional = true }
