[package]
name = "scalliony-client"
version = "0.1.0"
description = "Scalliony programming game native client"
categories = ["games", "wasm", "rendering", "gui"]
keywords = ["game", "wasm", "webassembly", "engine"]
edition = "2021"
homepage = "https://scalliony.wadza.fr"
license = "MIT"
repository = "https://github.com/scalliony/repo"

[dependencies]
scalliony-engine = { path = "../engine", version = "0.1" }
bevy = { version = "0.8", default-features = false, features = ["bevy_animation", "bevy_pbr", "bevy_scene", "bevy_gltf"] }
bevy_egui = "0.15"

[features]
default = ["x11"]
x11 = ["bevy/x11"]
