[package]
name = "scalliony-client"
version = "0.1.0"
description = "Scalliony programming game native client"
categories = ["games", "wasm", "rendering", "gui"]
keywords = ["game", "wasm", "webassembly", "engine"]
edition = "2021"
homepage = "https://scalliony.wadza.fr"
license = "MIT"
repository = "https://github.com/scalliony/repo"

[features]
default = ["threaded"]
online = ["bulb/serde", "quad-net", "serde_json"]
offline = ["engine"]
threaded = []

[dependencies]
bulb = { path = "../bulb", package = "scalliony-bulb", version = "0.1.0" }
engine = { path = "../engine", package = "scalliony-engine", version = "0.1.0", optional = true }
quad-net = { version = "0.1", default-features = false, optional = true }
serde_json = { version = "1", optional = true }
macroquad = { version = "0.3.25", default-features = false, features = ["audio", "log-rs"] }
egui-macroquad = "0.15"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
