[package]
name = "scalliony-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5", features = ["ws", "headers"] }
axum-extra = { version = "0.3", features = ["spa", "typed-routing", "cookie"] }
futures = "0.3"
serde = "1"
serde_json = "1"
oauth2 = "4.2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2", features = ["parking_lot"] }
wasmtime = "0.39"
wasmtime-wasi = "0.39"
wasi-common = "0.39"
jsonwebtoken = "8.1"
dotenv = "0.15"
anyhow = "1"
chrono = "0.4"
derive_more = "0.99"
typed-index-collections = "3"
bytes = "1"
