[package]
name = "scalliony-sys"
version = "0.1.0"
description = "Scalliony native system binding"
categories = ["games", "wasm"]
keywords = ["game", "wasm", "webassembly", "engine", "lib"]
edition = "2021"
homepage = "https://scalliony.wadza.fr"
license = "MIT"
repository = "https://github.com/scalliony/repo"

[features]

[dependencies]
anyhow = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-instrument = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = "0.39"
wasmtime-wasi = "0.39"
wasi-common = "0.39"
